test/classes/casts/owned-to-shared-cast-nilable-to-nilable.good
owned-to-shared-cast-nilable-to-nilable.chpl:6: error: illegal cast from owned MyClass? to shared MyClass?
